--- a/web/css/style.css
+++ b/web/css/style.css
@@ -559,7 +559,7 @@ a:hover {
 	line-height: 2.5;
 }
 /* кнопка заказать комплексную проверку */
-#recommended-order {
+#recommended-order-banner {
 	position: fixed;
 	transform: translateY(40%);
 	top: 40%;
@@ -571,23 +571,23 @@ a:hover {
 	background-color: #f9f9f9;
 	padding: 2em 1em;
 }
-#recommended-order p {
+#recommended-order-banner p {
 	padding: 0;
 	font-size: 1.2em;
 	margin-bottom: 1em;
 	line-height: 1.2;
 }
-#recommended-order a {
+#recommended-order-banner a {
 	display: inline-block;
 	background-color: #F0AD4E;
 	color: #fff;
 	padding: 1em 1.7em;
 	font-size: 1.2em;
 }
-#recommended-order a:hover {
+#recommended-order-banner a:hover {
 	text-decoration: none;
 }
-#recommended-order a i {
+#recommended-order-banner a i {
 	margin-right: 0.5em;
 	font-size: 1.1em;
 }
