--- a/web/css/style.css
+++ b/web/css/style.css
@@ -684,10 +684,21 @@ a:hover {
 	color: #fff;
 }
 
+/* banners-on-main */
+#banners-on-main {
+	margin: 2em 0 0.5em 0;
+}
+#banners-on-main img {
+	margin-bottom: 0.5em;
+}
+
 /* our clients on main */
 #our-clients-on-main {
 	margin-top: 4em;
 	margin-bottom: 4em;
+}
+#our-clients-on-main ul {
+	margin-top: 3em;
 }
 #our-clients-on-main ul li {
 	display: inline-block;
