updates: scans style

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -277,8 +277,16 @@ a:hover {
 #order .tab-content #regions #step1 label input {
 	margin-top: 1.3em;
 }
+#order .scan {
+	margin-bottom: 0.5em;
+	min-height: 150px;
+}
 #order .scan img {
-	padding: 0.5em 0;
+	padding: 0.5em;
+	border: 1px #B2B2B2 solid;
+	object-fit: cover;
+	width: 100%;
+	max-height: 220px;
 }
 
 .btn-navigate {
