--- a/web/css/style.css
+++ b/web/css/style.css
@@ -288,6 +288,9 @@ a:hover {
 	width: 100%;
 	max-height: 140px;
 }
+#order .scan p {
+	padding: 0.5em;
+}
 
 .btn-navigate {
 	width: 50%;
@@ -434,9 +437,7 @@ a:hover {
 
 .about-services {
 	margin: 1em 0;
-	/*padding: 0.7em 1.8em;*/
 	padding: 1em 1.8em;
-	/*border: 1px #F1E9DB solid;*/
 	border: 1px #eee solid;
 }
 
@@ -452,17 +453,12 @@ a:hover {
 	border-radius: 100px;
 	border: 1px #F1E9DB solid;
 	padding: 1.4em 1.5em;
-	/*margin-left: 0.4em;*/
-	/*margin-right: 1em;*/
 	text-align: center;
 }
 .about-services .img-block img {
 	width: 38px;
 	height: 38px;
 }
-/*.about-services .text-block {
-	width: 75%;
-}*/
 .about-services .text-block h3 {
 	font-size: 1.3em;
 	text-transform: uppercase;
@@ -1015,6 +1011,16 @@ footer #copyright a {
 		padding: 0.4em 0.5em;
 	}
 	.for-whom-block p {
+		min-height: 0;
+	}
+	.about-services .img-block {
+		margin: 1.5em 0;
+	}
+	.about-services .text-block {
+		text-align: center;
+		margin-bottom: 1.5em;
+	}
+	.advance-block {
 		min-height: 0;
 	}
 	.order-steps-left {
