--- a/web/css/style.css
+++ b/web/css/style.css
@@ -297,6 +297,40 @@ a:hover {
 	height: 110px;
 }
 
+/* thank-you */
+#thank-you {
+	background-color: #fff;
+	background-color: rgb(0,0,0,0.5);
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 999;
+	width: 100%;
+	/*height: 100%;*/
+	padding: 5em 2em;
+	margin: 0;
+	line-height: 3;
+	
+}
+/*.thank-you .thank-you-inner {
+	transform: translateY(50%);
+	top: 50%;
+}*/
+
+#thank-you .thank-you-inner {
+	margin: 10% auto;
+	max-width: 60%;
+	background-color: #fff;
+	padding: 3em 2em;
+	border: 1px #d0d0d0 solid;
+}
+#thank-you .thank-you-inner button {
+	margin-top: 1em;
+}
+
+
 .btn-navigate {
 	width: 50%;
 }
@@ -1009,6 +1043,11 @@ footer #copyright a {
 		margin: 0;
 		margin-bottom: 2em;
 		min-height: auto;
+	}
+	#thank-you .thank-you-inner {
+		margin: 5% auto;
+		max-width: 90%;
+		padding: 2em;
 	}
 }
 @media (max-width:767px) {	/* смартфоны */
